--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -161,6 +161,7 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
     compile project(':react-native-vector-icons')
     compile project(':react-native-image-picker')
+    implementation project(':@react-native-community_async-storage')
 }
 
 // Run this once to be able to run the application with BUCK
