--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.4.2",
+    "mobx": "^5.9.4",
+    "mobx-react": "^6.0.2",
     "react": "16.8.3",
     "react-native": "0.59.4",
     "react-native-gifted-form": "^0.1.1",
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/runtime": "^7.4.3",
     "babel-jest": "^24.7.1",
     "jest": "^24.7.1",
