--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,5 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '9.0'
 
 target 'mobxnative' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
@@ -7,10 +7,10 @@ target 'mobxnative' do
 
   # Pods for mobxnative
 
-  target 'mobxnative-tvOSTests' do
-    inherit! :search_paths
-    # Pods for testing
-  end
+  # target 'mobxnative-tvOSTests' do
+  #   inherit! :search_paths
+  #   # Pods for testing
+  # end
 
   target 'mobxnativeTests' do
     inherit! :search_paths
@@ -31,4 +31,6 @@ target 'mobxnative-tvOS' do
   end
 
 end
-pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
+# pod 'Picker', :path => '../node_modules/react-native-picker'
+# pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
