--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,30 +7,30 @@ target 'mobxnative' do
 
   # Pods for mobxnative
 
-  target 'mobxnative-tvOSTests' do
-    inherit! :search_paths
-    # Pods for testing
-  end
-
-  target 'mobxnativeTests' do
-    inherit! :search_paths
-    # Pods for testing
-  end
-
-end
-
-target 'mobxnative-tvOS' do
-  # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
-  # use_frameworks!
-
-  # Pods for mobxnative-tvOS
-
   # target 'mobxnative-tvOSTests' do
   #   inherit! :search_paths
   #   # Pods for testing
   # end
 
+  # target 'mobxnativeTests' do
+  #   inherit! :search_paths
+  #   # Pods for testing
+  # end
+
 end
+
+# target 'mobxnative-tvOS' do
+#   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
+#   # use_frameworks!
+
+#   # Pods for mobxnative-tvOS
+
+#   target 'mobxnative-tvOSTests' do
+#     inherit! :search_paths
+#     # Pods for testing
+#   end
+
+# end
 
 pod 'React', :path => '../node_modules/react-native', :subspecs => [
   'RCTTest',
